--- a/front-web/src/App.css
+++ b/front-web/src/App.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #da5c5c;
-  --primary-hover-color: #a74b4b;
+  --primary-color: #35A9F2;
+  --primary-hover-color: #35A9F2;
   --dark-color: #263238;
   --secondary-color: #9E9E9E;
   --light-color: #F5F5F5;
