--- a/front-web/src/components/Orders/styles.css
+++ b/front-web/src/components/Orders/styles.css
@@ -5,6 +5,12 @@
   .orders-container h3 {
     margin: 0;
   }
+
+  img {
+    text-align: center;
+    width: 100%;
+    border-radius: 4px;
+  }
   
   .orders-steps-container {
     display: flex;
@@ -69,6 +75,8 @@
     border-radius: 10px;
     padding: 15px;
     cursor: pointer;
+    width: 229px;
+   
   }
   
   .order-card-container.selected {
@@ -80,6 +88,7 @@
   
   .order-card-container:hover {
     transform: scale(1.01);
+     
   }
   
   .order-card-title {
